# Frhodo

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  README.rst  environment.yml  frhodo_environment.yml  frhodo_environment_pinned.yml  frhodo_environment_pinned_all.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
Development/: Ideas.txt  changelog.txt
Development/Random Testing/: threaded_plot.py
Doc/: SRI deriv.docx  Troe deriv.docx
Example/: FirstTimeUse.docx
Example Input Files/: ExampleConfig.ini  Shock1.exp
Example Input Files/Mechanism/: Cycloheptane.mech  Cycloheptane.therm
Example/Experiment/: Shock1.rho
Example/Mechanism/: Cycloheptane - Opt 1.mech  Cycloheptane - Opt 2.mech
Example/Simulation/: README.txt
doc/: api.md  incident_shock_derivation.md  sri_deriv.md  sundials_api_reference.md  troe_deriv.md
example/: first_time_use.md
example/experiment/: shock1raw1.sig
frhodo/: CiteSoftLocal.py  appdirs.py  config_io.py  help_menu.py  main.py  mech_widget.py  misc_widget.py  options_panel_widgets.py  save_output.py  save_widget.py  series_viewer_widget.py  settings.py  sim_explorer_widget.py  soln2ck.py  thermo_widget.py  version.py
frhodo/UI/: save_dialog.ui
frhodo/api/: __init__.py  driver.py  interface.py  optimize.py
frhodo/calculate/: convert_units.py  integrate.py  mech_fcns.py  reactors.py  shock_fcns.py  smooth_data.py
frhodo/plot/: base_plot.py  custom_mpl_ticker_formatter.py  custom_mplscale.py  draggable.py  optimization_plot.py  plot_main.py  plot_widget.py  raw_signal_plot.py  signal_plot.py  sim_explorer_plot.py
src/: appdirs.py  colors.py  config_io.py  convert_units.py  default_settings.ini  error_window.py  help_menu.py  main.py  mech_fcns.py  mech_widget.py  misc_widget.py  options_panel_widgets.py  plot.py  plot_widget.py  save_output.py  save_widget.py  series_viewer_widget.py  settings.py  shock_fcns.py  sim_explorer_widget.py  soln2ck.py  thermo_widget.py
src/UI/: error_window.ui  main_window.ui
src/calculate/: convert_units.py  integrate.py  mech_fcns.py  reactors.py  shock_fcns.py  smooth_data.py
src/frhodo/: __init__.py  api.py  app.py
tests/: conftest.py  test_api.py  test_binary_resolution.py  test_import_discipline.py  test_imports.py  test_pyright.py
(+230 files in other folders)
